--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo3",
   "version": "6.1.5",
   "private": true,
-  "homepage": "https://keenthemes.com/metronic/preview/react/demo3",
+  "homepage": "https://www.VideoAudioTranscription.com",
   "scripts": {
     "serve": "cp-cli build _site/metronic/preview/react && serve",
     "start": "react-scripts start",
@@ -32,7 +32,16 @@
     ]
   },
   "dependencies": {
+    "@aws-amplify/analytics": "^3.1.7",
     "@aws-amplify/api": "^3.1.7",
+    "@aws-amplify/auth": "^3.2.4",
+    "@aws-amplify/core": "^3.2.4",
+    "@aws-amplify/interactions": "^3.1.7",
+    "@aws-amplify/pubsub": "2.1.1",
+    "@aws-amplify/storage": "^3.1.7",
+    "@aws-amplify/ui": "^2.0.2",
+    "@aws-amplify/xr": "1.1.5",
+    "@date-io/core": "1.3.6",
     "@date-io/date-fns": "^1.3.11",
     "@formatjs/intl-pluralrules": "^1.3.5",
     "@fortawesome/fontawesome-free": "^5.11.2",
@@ -41,10 +50,11 @@
     "@material-ui/lab": "^4.0.0-alpha.33",
     "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.6.0",
+    "@react-native-community/netinfo": "5.5.0",
     "@tanem/svg-injector": "^8.0.35",
     "aws-amplify": "^3.0.8",
     "aws-amplify-react": "^4.1.7",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "axios-mock-adapter": "^1.17.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -52,17 +62,20 @@
     "clsx": "^1.0.4",
     "cp-cli": "^2.0.0",
     "css-mediaquery": "^0.1.2",
-    "date-fns": "^2.8.1",
+    "date-fns": "2.1.0",
     "dentist": "^1.0.3",
     "downshift": "^3.4.2",
     "fg-loadcss": "^2.1.0",
     "formik": "^2.0.6",
+    "jquery": "^3.5.0",
     "json2mq": "^0.2.0",
+    "jss": "^10.1.1",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.15",
     "material-ui-popup-state": "^1.4.1",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.4.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
@@ -85,7 +98,9 @@
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "socicon": "^3.0.5"
+    "socicon": "^3.0.5",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
     "copyfiles": "^2.1.1",
